[package]
name = "stmpe1600"
version = "1.0.0"
authors = ["Sam Jones <email@spad.io>"]
description = "Platform-agnostic Rust driver for the STMPE1600 I/O expander."
readme = "README.md"
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["no-std", "embedded", "hardware-support"]
keywords = ["embedded-hal", "io", "expander", "i2c", "driver"]
repository = "https://github.com/Spadi0/stmpe1600-rs"

[dependencies]
embedded-hal = "0.2"